--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,10 @@
           <li><a href="/likes">Likes</a></li>
           <li><a href="/photos">Photos</a></li>
           <li><a href="/rails/info">Sitemap</a></li>
+          <li><a href="/users">All Users</a></li>
+          <% if current_user != nil %>
+            <li><a href="/users/<%= current_user.id %>"><%= current_user.username %></a></li>
+          <% end %>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
