--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <ul>
   <% @photos.each do |photo| %>
+    <li><%= photo.caption %></li>
     <li><img src="<%= photo.image %>"></li>
   <% end %>
 </ul>
