--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,34 +1,74 @@
+<div class="container">
 <div class="page-header">
-  <h1>
-    Photos
-    <a href="/photos/new" class="btn btn-lg btn-success">New Photo</a>
-  </h1>
+
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <a href="/photos/new" class="btn btn-default btn-block"><i class="fa fa-plus" aria-hidden="true"></i></a>
+    </div>
+  </div>
 </div>
 
-<div class="row">
-  <div class="col-md-12">
-    <table class="table table-striped table-hover">
-      <tr>
-        <th>Caption</th>
-        <th>Image</th>
-        <th>User</th>
-        <th>Actions</th>
-      </tr>
 
-      <% @photos.each do |photo| %>
-      <tr>
-        <td><%= photo.caption %></td>
-        <td><%= photo.image %></td>
-        <td><%= photo.user_id %></td>
-        <td>
-          <a href="/photos/<%= photo.id %>" class="btn btn-primary">Show</a>
-          <% if current_user.id == photo.user_id %>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <% @photos.each do |photo| %>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <a href="/users/<%= photo.user_id %>"> <%= photo.user.username %></a>
+          <small>
+            Created <%= time_ago_in_words(photo.created_at) %> ago
+          </small>
+          <td>
+
+            <% if current_user.id == photo.user_id %>
             <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">Edit</a>
             <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+            <% end %>
+
+          </td>
+        </h3>
+      </div>
+
+      <div class="panel-body">
+        <a href="/photos/<%= photo.id %>">
+          <img src="<%= photo.image %>" class="img-responsive">
+        </a>
+
+        <p>
+        </p>
+        <ul class="media-list">
+
+          <li class="media">
+            <div class="media-body">
+              <h6 class="media-heading">
+                <a href="/users/<%= photo.user_id %>"><%= photo.user.username %></a>
+                <small>
+                  Over <%= time_ago_in_words(photo.created_at) %> ago
+                </small>
+              </h6>
+              <p> <%= photo.caption %></p>
+            </div>
+          </li>
+
+          <% photo.comments.each do |comment| %>
+
+          <li class="media">
+            <div class="media-body">
+              <h6 class="media-heading">
+                <a href="/users/<%= photo.user_id %>"><%= comment.user.username %></a>
+                <small>
+                  Over <%= time_ago_in_words(comment.created_at) %> ago
+                </small>
+              </h6>
+              <p> <%= comment.body %></p>
+            </div>
+          </li>
           <% end %>
-        </td>
-      </tr>
-      <% end %>
-    </table>
+        </ul>
+      </div>
+
+    </div>
+    <% end %>
   </div>
 </div>
