--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,24 +40,21 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/comments">Comments</a></li>
-          <li><a href="/likes">Likes</a></li>
-          <li><a href="/my_likes">My Likes</a></li>
-          <li><a href="/photos">Photos</a></li>
-          <li><a href="/rails/info">Sitemap</a></li>
-          <li><a href="/users">All Users</a></li>
+          <li><a href="/my_likes"><i class="fa fa-fw fa-heart"></i> <span class="hidden-sm"> My Likes</a></li>
+          <li><a href="/photos">><i class="fa fa-fw fa-file-photo-o"></i> <span class="hidden-sm"> All Posts</a></li>
+          <li><a href="/users"><i class="fa fa-fw fa-users"></i><span class="hidden-sm"> All Users</a></li>
           <% if current_user != nil %>
-            <li><a href="/users/<%= current_user.id %>"><%= current_user.username %></a></li>
+            <li><a href="/users/<%= current_user.id %>"><i class="fa fa-user" aria-hidden="true"></i><span class="hidden-sm"> <%= current_user.username %></a></li>
           <% end %>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
           <% if current_user != nil %>
-            <li><a href="/users/edit"><%= current_user.username %></a></li>
-            <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a></li>
+            <li><a href="/users/edit"><i class="fa fa-fw fa-edit"></i> <%= current_user.username %></a></li>
+            <li><a href="/users/sign_out" data-method="delete" rel="nofollow"><i class="fa fa-fw fa-sign-out"></i> Sign Out</a></li>
           <% else %>
-            <li><a href="/users/sign_up">Sign Up</a></li>
-            <li><a href="/users/sign_in">Sign In</a></li>
+            <li><a href="/users/sign_up"><i class="fa fa-user-plus" aria-hidden="true"></i> Sign Up</a></li>
+            <li><a href="/users/sign_in"><i class="fa fa-fw fa-sign-in"></i> Sign In</a></li>
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
