--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,74 +1,113 @@
 <div class="container">
-<div class="page-header">
+  <div class="page-header">
+
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <a href="/photos/new" class="btn btn-default btn-block"><i class="fa fa-plus" aria-hidden="true"></i></a>
+      </div>
+    </div>
+  </div>
+
 
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <a href="/photos/new" class="btn btn-default btn-block"><i class="fa fa-plus" aria-hidden="true"></i></a>
-    </div>
-  </div>
-</div>
+      <% @photos.each do |photo| %>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <a href="/users/<%= photo.user_id %>"> <%= photo.user.username %></a>
+            <small>
+              Created <%= time_ago_in_words(photo.created_at) %> ago
+            </small>
+            <td>
 
+              <% if current_user.id == photo.user_id %>
+              <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">Edit</a>
+              <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+              <% end %>
 
-<div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <% @photos.each do |photo| %>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">
-          <a href="/users/<%= photo.user_id %>"> <%= photo.user.username %></a>
-          <small>
-            Created <%= time_ago_in_words(photo.created_at) %> ago
-          </small>
-          <td>
+            </td>
+          </h3>
+        </div>
 
-            <% if current_user.id == photo.user_id %>
-            <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">Edit</a>
-            <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+        <div class="panel-body">
+          <a href="/photos/<%= photo.id %>">
+            <img src="<%= photo.image %>" class="img-responsive">
+          </a>
+
+          <p>
+            <% if photo.likes.find_by(:user_id => current_user.id) == nil %>
+            <form action="/create_like" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+              <input name="photo_id" value="<%= photo.id %>" type="hidden">
+              <input name="user_id" value="<%= current_user.id %>" type="hidden">
+              <button class="btn btn-link">
+                <i class="fa fa-heart-o"></i>
+              </button>
+            </form>
+            <% else %>
+            <a href="/delete_like/<%= photo.likes.find_by(:user_id => current_user.id).id %>"<i class="fa fa-heart"></i></a>
             <% end %>
+          </p>
+          <ul class="media-list">
 
-          </td>
-        </h3>
+            <li class="media">
+              <div class="media-body">
+                <h6 class="media-heading">
+                  <a href="/users/<%= photo.user_id %>"><%= photo.user.username %></a>
+                  <small>
+                    Over <%= time_ago_in_words(photo.created_at) %> ago
+                  </small>
+                </h6>
+                <p> <%= photo.caption %></p>
+              </div>
+            </li>
+
+            <% photo.comments.each do |comment| %>
+
+            <li class="media">
+              <div class="media-body">
+                <h6 class="media-heading">
+                  <a href="/users/<%= photo.user_id %>"><%= comment.user.username %></a>
+                  <small>
+                    Over <%= time_ago_in_words(comment.created_at) %> ago
+                  </small>
+                </h6>
+                <p> <%= comment.body %></p>
+              </div>
+            </li>
+            <% end %>
+            <li class="media">
+              <div class="media-body">
+                <form action="/create_comment" method="post">
+                  <!-- Hidden input for authenticity token to protect from forgery -->
+                  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+                  <input type="hidden" name="photo_id" value="<%= photo.id %>">
+                  <input type="hidden" name="user_id" value="<%= current_user.id %>">
+                  <div class="form-group">
+
+                    <label for="body" class="sr-only"></label>
+
+                    <div class="input-group">
+                      <input type="text" id="body" name="body" class="form-control" placeholder="Add a comment..." required>
+                      <span class="input-group-btn">
+                        <button class="btn btn-default" type="submit">
+                          <i class="fa fa-commenting-o"></i>
+                        </button>
+                      </span>
+                    </div>
+
+                  </div>
+
+                </form>
+
+              </div>
+            </li>
+          </ul>
+        </div>
+
       </div>
-
-      <div class="panel-body">
-        <a href="/photos/<%= photo.id %>">
-          <img src="<%= photo.image %>" class="img-responsive">
-        </a>
-
-        <p>
-        </p>
-        <ul class="media-list">
-
-          <li class="media">
-            <div class="media-body">
-              <h6 class="media-heading">
-                <a href="/users/<%= photo.user_id %>"><%= photo.user.username %></a>
-                <small>
-                  Over <%= time_ago_in_words(photo.created_at) %> ago
-                </small>
-              </h6>
-              <p> <%= photo.caption %></p>
-            </div>
-          </li>
-
-          <% photo.comments.each do |comment| %>
-
-          <li class="media">
-            <div class="media-body">
-              <h6 class="media-heading">
-                <a href="/users/<%= photo.user_id %>"><%= comment.user.username %></a>
-                <small>
-                  Over <%= time_ago_in_words(comment.created_at) %> ago
-                </small>
-              </h6>
-              <p> <%= comment.body %></p>
-            </div>
-          </li>
-          <% end %>
-        </ul>
-      </div>
-
+      <% end %>
     </div>
-    <% end %>
   </div>
-</div>
