pretty-up devise stuff and added username

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="/my_likes"><i class="fa fa-fw fa-heart"></i> <span class="hidden-sm"> My Likes</a></li>
-          <li><a href="/photos">><i class="fa fa-fw fa-file-photo-o"></i> <span class="hidden-sm"> All Posts</a></li>
+          <li><a href="/photos"><i class="fa fa-fw fa-file-photo-o"></i> <span class="hidden-sm"> All Posts</a></li>
           <li><a href="/users"><i class="fa fa-fw fa-users"></i><span class="hidden-sm"> All Users</a></li>
           <% if current_user != nil %>
             <li><a href="/users/<%= current_user.id %>"><i class="fa fa-user" aria-hidden="true"></i><span class="hidden-sm"> <%= current_user.username %></a></li>
